--- a/4_Visualising_Data.ipynb
+++ b/4_Visualising_Data.ipynb
@@ -228,7 +228,7 @@
     "g = sns.displot(np.log10(stats97['gdp']),\n",
     "             bins=30, \n",
     "             color='red')\n",
-    "g.set_titles('GDP in 1997')\n",
+    "g.set(title='GDP in 1997')\n",
     "g.set_xlabels('log10(GDP / USD_2010)')\n",
     "plt.show()"
    ]
